fix: wrap li in ul - a11y

--- a/client/src/pages/home-page/_home-page.scss
+++ b/client/src/pages/home-page/_home-page.scss
@@ -21,6 +21,7 @@
   }
   &__list {
     margin: 20px 0 45px;
+    padding: 0;
   }
   &__btn {
     margin-bottom: 50px;
